# rts_dx12

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp  readme.md  shaders.hlsl  vcpkg.json  vcpkg_dx12.json
shaders/: shaders.hlsl  text.hlsl  unlit_2d.hlsl
src/engine/: appwindow.h  asset_importer.h  comptr.h  dx11renderer.cpp  dx11renderer.h  dx12renderer.cpp  dx12renderer.h  engine.h  game.cpp  game.h  game_util.cpp  game_util.h  geometry.cpp  geometry.h  main.cpp  renderer.cpp  renderer.h  shader.h  timer.cpp  timer.h  window.cpp
src/game/: rts_game.cpp  rts_game.h
src/game/assets/: house.glb  wood_icon.pixi
src/lib/: tiny_gltf.cc
